--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,9 @@
 /* ## Intro Section */
 .intro{
     background-color: colors.$neutral-color;
-    height: 35rem;
+    height: 33rem;
 
-    padding: 6rem;
+    padding: 4rem 6rem 6rem 6rem;
 
     display: flex;
     justify-content: space-between;
@@ -50,9 +50,9 @@
 
 /* ## Recommendation Card */
 .recommendation-card{
-    height: 30rem;
+    height: 27rem;
 
-    & .card__background{
+    .card__background{
         transition: transform .5s ease-out;
     }
     
