--- a/css/partials/_mixins.scss
+++ b/css/partials/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin fill-image(){
     position: absolute;
-    width: 100%;
+    width: 101%;
 
     top: 50%;
     left: 50%;
